# protect-carrot

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  TECH_STACK.md  build-web.sh  deploy.sh  flake.nix  index.html  protect_carrot.js  protect_carrot.js.br  wasm_size.txt
.github/workflows/: release-wasm.yml
assets/cursors/: carrot.cur.ron
assets/locales/en-US/: main.ftl.ron  ui.ftl
assets/locales/zh-CN/: main.ftl.ron  ui.ftl
assets/tuning/: focus_beams.focus.ron
nixos/: nginx-module.nix
snippets/protect_carrot-05420f921b7b221b/: inline0.js  inline1.js  inline2.js  inline3.js  inline4.js  inline5.js  inline6.js  inline7.js  inline8.js
src/: asset_io.rs  audio.rs  bestiary.rs  board.rs  build.rs  components.rs  creatures.rs  data.rs  enemy.rs  equipment.rs  fluent_i18n.rs  game.rs  hero.rs  i18n.rs  lib.rs  main.rs  meta.rs  monster.rs  quality.rs  sprites.rs  states.rs  tower.rs  tuning.rs  tutorial.rs  ui.rs  vfx.rs
tools/: audit_release_content.py  comfy_gen.py  comfy_img2img.py  comfy_kontext.py  comfy_wan_i2v.py  gen_combo_anim.sh  gen_equipment_icons.py  gen_hero_walks.sh  gen_pixellab.py  gen_pixellab_extra.py  gen_race_portraits.sh  gen_rd.py  gen_sfx.sh  gen_sfx_extra.sh  gen_species_sprites.py  gen_sprites.py  gen_sprites_ai.sh  gen_sprites_storyos_comfy.mjs  gen_story_char_anim.sh  gen_story_voice.py  import_monster_pack_sprites.py  make_sprite_contact_sheet.py  remove_bg.py  serve_gzip.py  serve_https.sh  to_webp.sh  verify_sprite_assets.py
