[package]
name = "protect_carrot"
version = "0.1.0"
edition = "2024"
description = "保卫萝卜 tower-defense, ported to Bevy (single-player). WebGPU/wasm learning project."

[dependencies]
# Pinned to Bevy 0.19 with an explicit feature set. Avoid the broad `2d`/`ui`
# groups because they pull Bevy's `default_platform`, including X11. This game
# targets Wayland natively and WebGPU on wasm.
bevy = { version = "0.19", default-features = false, features = [
  "2d_bevy_render",
  "bevy_audio",
  "bevy_ui_widgets",
  "bevy_winit",
  "custom_cursor",
  "default_app",
  "default_font",
  "keyboard",
  "mouse",
  "multi_threaded",
  "scene",
  "touch",
  "ui_bevy_render",
  "ui_picking",
  "wav",
  "wayland",
  "webp",
] }
bevy_asset_loader = { version = "0.27.0", default-features = false, features = [
  "progress_tracking",
] }
bevy_fluent = "0.15.0"
bevy_cursor_kit = { version = "0.9.0", default-features = false, features = [
  "serde_ron_asset",
] }
bevy_common_assets = { version = "0.17.0", default-features = false, features = [
  "json",
  "ron",
] }
bevy-persistent = { version = "0.11.0", default-features = false, features = [
  "ron",
] }
iyes_progress = "0.17.0"
moonshine-kind = "0.5.1"
serde = { version = "1", features = ["derive"] }

# Pin wasm-bindgen to the wasm-bindgen-cli version used by build-web.sh and CI.
# The CLI and crate schema versions MUST match exactly.
wasm-bindgen = "=0.2.126"

# Web-only: src/asset_io.rs implements a retrying HTTP asset reader (bevy 0.19's
# built-in wasm reader panics on a stream reset mid-body). These versions match
# the ones bevy already locks, so no duplicate crate versions are introduced.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.103"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = [
  "Window",
  "WorkerGlobalScope",
  "Response",
] }

[features]
# Local development only: hot-reload changed sprites/audio while tuning visuals.
# Do not use this for release/web builds.
dev = ["bevy/file_watcher"]

# Build the web target with the WebGPU backend. Bevy makes `webgpu` take
# precedence over the default `webgl2`, so enabling this is all that's needed:
#   cargo build --target wasm32-unknown-unknown --release --features webgpu
webgpu = ["bevy/web", "bevy/webgpu"]

# Native dev profile: optimize dependencies even in debug so Bevy runs smoothly,
# while keeping our own crate fast to compile. This is the standard Bevy setup.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Release/wasm: small + fast.
[profile.release]
opt-level = "z"
lto = "thin"       # "fat" OOM-killed the linker here for ~modest gain; thin is plenty
codegen-units = 1
panic = "abort"
strip = true       # strip symbols from the rust binary before wasm-bindgen
